Bug 160420 - [Fetch API] Fetch promises should not reject or resolve when ActiveDOMObjects are being stopped
Summary: [Fetch API] Fetch promises should not reject or resolve when ActiveDOMObjects...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords:
Depends on: 151937
Blocks:
  Show dependency treegraph
 
Reported: 2016-08-01 12:52 PDT by youenn fablet
Modified: 2016-08-02 01:08 PDT (History)
5 users (show)

See Also:


Attachments
Patch (11.54 KB, patch)
2016-08-01 13:24 PDT, youenn fablet
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from ews126 for ios-simulator-wk2 (693.85 KB, application/zip)
2016-08-01 14:09 PDT, Build Bot
no flags Details
Archive of layout-test-results from ews101 for mac-yosemite (719.87 KB, application/zip)
2016-08-01 14:10 PDT, Build Bot
no flags Details
Patch for landing (9.93 KB, patch)
2016-08-02 00:31 PDT, youenn fablet
no flags Details | Formatted Diff | Diff
Patch for landing (14.15 KB, patch)
2016-08-02 00:38 PDT, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2016-08-01 12:52:35 PDT
This would lead to crashes, for instance in workers.
Comment 1 youenn fablet 2016-08-01 13:24:30 PDT
Created attachment 285036 [details]
Patch
Comment 2 youenn fablet 2016-08-01 13:26:07 PDT
Some crashes are remaining due to the assertion in WorkerThreadableLoader (loader being null and no callback called).
Comment 3 Build Bot 2016-08-01 14:09:05 PDT
Comment on attachment 285036 [details]
Patch

Attachment 285036 [details] did not pass ios-sim-ews (ios-simulator-wk2):
Output: http://webkit-queues.webkit.org/results/1794030

New failing tests:
imported/w3c/web-platform-tests/fetch/api/cors/cors-basic-worker.html
imported/w3c/web-platform-tests/fetch/api/cors/cors-cookies-worker.html
Comment 4 Build Bot 2016-08-01 14:09:07 PDT
Created attachment 285041 [details]
Archive of layout-test-results from ews126 for ios-simulator-wk2

The attached test failures were seen while running run-webkit-tests on the ios-sim-ews.
Bot: ews126  Port: ios-simulator-wk2  Platform: Mac OS X 10.11.5
Comment 5 Build Bot 2016-08-01 14:10:08 PDT
Comment on attachment 285036 [details]
Patch

Attachment 285036 [details] did not pass mac-ews (mac):
Output: http://webkit-queues.webkit.org/results/1794081

New failing tests:
imported/w3c/web-platform-tests/fetch/api/cors/cors-cookies-worker.html
Comment 6 Build Bot 2016-08-01 14:10:10 PDT
Created attachment 285043 [details]
Archive of layout-test-results from ews101 for mac-yosemite

The attached test failures were seen while running run-webkit-tests on the mac-ews.
Bot: ews101  Port: mac-yosemite  Platform: Mac OS X 10.10.5
Comment 7 Alex Christensen 2016-08-01 21:32:55 PDT
Comment on attachment 285036 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=285036&action=review

watch the bots after landing this.  I wouldn't be surprised if more of the tests become flaky.

> LayoutTests/TestExpectations:-336
> -# Fetch Worker tests skipped until bug 156737 is resolved

Is this still going to be resolved?

> LayoutTests/TestExpectations:-338
> -imported/w3c/web-platform-tests/fetch/api/cors/cors-basic-worker.html [ Skip ]
> -imported/w3c/web-platform-tests/fetch/api/cors/cors-cookies-worker.html [ Skip ]

these seem to have failed on ews.
Comment 8 youenn fablet 2016-08-01 23:06:12 PDT
Thanks for the review.

(In reply to comment #7)
> Comment on attachment 285036 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=285036&action=review
> 
> watch the bots after landing this.  I wouldn't be surprised if more of the
> tests become flaky.

Yes! I was thinking to activate this only for Release mode, but after some testing, it seems Debug is quite stable.

> > LayoutTests/TestExpectations:-336
> > -# Fetch Worker tests skipped until bug 156737 is resolved
> 
> Is this still going to be resolved?

I cannot reproduce it anymore 8-)

> > LayoutTests/TestExpectations:-338
> > -imported/w3c/web-platform-tests/fetch/api/cors/cors-basic-worker.html [ Skip ]
> > -imported/w3c/web-platform-tests/fetch/api/cors/cors-cookies-worker.html [ Skip ]
> 
> these seem to have failed on ews.

HTTPS tests on WK2 bots are failing due to invalid certificates.
But they pass on WK1.
I probably need to add specific expectations for these tests.
Comment 9 youenn fablet 2016-08-02 00:31:41 PDT
Created attachment 285081 [details]
Patch for landing
Comment 10 youenn fablet 2016-08-02 00:38:52 PDT
Created attachment 285083 [details]
Patch for landing
Comment 11 WebKit Commit Bot 2016-08-02 01:08:47 PDT
Comment on attachment 285083 [details]
Patch for landing

Clearing flags on attachment: 285083

Committed r204020: <http://trac.webkit.org/changeset/204020>
Comment 12 WebKit Commit Bot 2016-08-02 01:08:52 PDT
All reviewed patches have been landed.  Closing bug.