[Fetch API] Fetch promises should not reject or resolve when ActiveDOMObjects are being stopped https://bugs.webkit.org/show_bug.cgi?id=160420

Patch by Youenn Fablet <youenn@apple.com> on 2016-08-02
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/cors/cors-preflight-redirect-worker-expected.txt: Added.
* web-platform-tests/fetch/nosniff/worker-expected.txt: Added.

Source/WebCore:

Test: http/tests/fetch/fetch-in-worker-crash.html

Promises should not be rejected when FetchResponse/FetchRequest are stopped as ActiveDOMObject.

* Modules/fetch/FetchBody.h:
(WebCore::FetchBody::cleanConsumePromise): Allowing to nullify the promise used to consume body.
* Modules/fetch/FetchBodyOwner.cpp:
(WebCore::FetchBodyOwner::stop): Nullifying the body consume promise if any.
* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::BodyLoader::stop): Nullifying the fetch promise if any.

LayoutTests:

* TestExpectations:
* http/tests/fetch/fetch-in-worker-crash-expected.txt: Added.
* http/tests/fetch/fetch-in-worker-crash.html: Added.
* http/tests/fetch/fetch-in-worker.js: Added.
(onmessage):
* platform/ios-simulator-wk2/imported/w3c/web-platform-tests/fetch/api/cors/cors-basic-worker-expected.txt:

Canonical link: https://commits.webkit.org/178584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204020 268f45cc-cd09-0410-ab3c-d52691b4dbfc